fix: fix overflow w/ swhkd image in mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -30,7 +30,8 @@ html {
 }
 
 .content__logo {
-  max-width: 360px;
+  width: 360px;
+  max-width: 90vw;
 }
 
 ul {
